<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentsViews.DoctorAppointmentDetails"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutDoctorAppointmentDetails"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbarDoctorViews"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_scrollFlags="scroll"
            app:titleTextColor="@color/background" />

    </com.google.android.material.appbar.AppBarLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentsViews.DoctorAppointmentDetails">

    <TextView
        android:id="@+id/labelDoctorAppointmentDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ageDoctorAppointmentDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/ageText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDoctorAppointmentDetails" />

    <TextView
        android:id="@+id/symptomsDoctorAppointmentDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/symptomsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageDoctorAppointmentDetails" />

    <TextView
        android:id="@+id/contactInfoTextDoctorAppointmentDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/Contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptomsDoctorAppointmentDetails"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/patientEmailDoctorAppointmentDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/emailText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactInfoTextDoctorAppointmentDetails" />

    <TextView
        android:id="@+id/patientPhoneDoctorAppointmentDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/phoneText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientEmailDoctorAppointmentDetails" />

    <TextView
        android:id="@+id/dateTimeOfAppointmentDoctorAppointmentDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientPhoneDoctorAppointmentDetails" />

    <TextView
        android:id="@+id/cancelledDoctorAppointmentDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeOfAppointmentDoctorAppointmentDetails" />

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>