<resources>
    <string name="app_name">What\'s up, doc?</string>
    <string name="welcome">Set an appointment</string>
    <string name="logIn">Log in</string>
    <string name="createAccount">Create account</string>
    <string name="createAccountUnderlined"><u>Create account</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ssn">SSN</string>
    <string name="password">Password</string>
    <string name="doctorLogIn">Doctor log in</string>
    <string name="patientLogIn">Patient log in</string>
    <string name="name">Name</string>
    <string name="email">E-mail address</string>
    <string name="phone">Phone number</string>
    <string name="country">Country</string>
    <string name="city">City</string>
...
    <string name="welcomeText">Hi, </string>
    <string name="home">Home</string>
    <string name="viewAppointments">View upcoming appointments</string>
    <string name="viewPastAppointments">View past appointments</string>
    <string name="editAccount">Edit account</string>
    <string name="editPreferences">Edit preferences</string>
    <string name="nav_open">Navigation open</string>
    <string name="nav_close">Navigation close</string>
    <string name="settings">Settings</string>
    <string name="logOut">Log out</string>
    <string name="region">Region</string>
    <string name="times">Times</string>
    <string name="add">Add</string>
    <string name="undo">Undo</string>
    <string name="chooseDAT">Choose appointment times</string>
    <string name="searchDoctors">Search doctors</string>
...
    <string name="localArea">Local area</string>
    <string name="selectArea">Select area</string>
    <string name="search">Search</string>
    <string name="makeAppointment">Make appointment</string>
    <string name="about">About</string>
    <string name="Contact">Contact</string>
    <string name="selectDate">Select date</string>
    <string name="symptoms">Symptoms</string>
    <string name="labelForYou">Label (only for you)</string>
    <string name="done">Done</string>
    <string name="wrongCredentials">Username or password incorrect</string>
    <string name="appointmentPostFail">Appointment could not be posted, try again later</string>
    <string name="edit">Edit</string>
...
