<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorViews.DoctorViews"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutDoctorViews"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbarDoctorViews"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_scrollFlags="scroll"
            app:titleTextColor="@color/background" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectDate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/ButtonTheme"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginStart="40dp"
            android:onClick="setDateDoctorViews"/>

        <TextView
            android:id="@+id/dateTextDoctorViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="40dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/appointmentsListDoctor"><!--

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/appointmentsListDoctor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>-->

    </FrameLayout>

</LinearLayout>